--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "babel-plugin-inline-import-data-uri": "^1.0.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "prettier": "^2.4.1"
