--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
       "@Components/*": [ "components/*" ],
       "@Hooks/*": [ "hooks/*" ],
       "@Pages/*": [ "pages/*" ],
+      "@Utils/*": [ "utils/*" ],
       "@Auth": [ "modules/Auth/index.ts" ],
       "@Bill": [ "modules/Bill/index.ts" ],
       "@Locale": [ "modules/Locale/index.ts" ],
+      "@Theme": [ "modules/Theme/index.ts" ],
       "@User": [ "modules/User/index.ts" ],
     },
   },
