--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "typescript": "^4.6.3"
